# CPPStarter

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
Apps/: CMakeLists.txt
Apps/ExampleApp/: CMakeLists.txt  Main.cpp
CMake/: CPPStarterWarnings.cmake  FindMiro.cmake
Lib/: CMakeLists.txt
Lib/CPPStarter/: CPPStarter.cpp  CPPStarter.h
Tests/: CMakeLists.txt  ExampleTests.cpp
